[gd_scene load_steps=4 format=3 uid="uid://dnqst4xrwvd8w"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_qbnst"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ee1a6"]
radius = 7.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5pg8n"]
radius = 31.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_qbnst")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -10)
shape = SubResource("CapsuleShape2D_ee1a6")

[node name="Interaction Components" type="Node2D" parent="."]
z_index = 1

[node name="InteractionArea" type="Area2D" parent="Interaction Components"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction Components/InteractionArea"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_5pg8n")

[node name="InteractLable" type="Label" parent="Interaction Components"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -64.0
offset_right = 113.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
text = "test"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="Interaction Components/InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="Interaction Components/InteractionArea" to="." method="_on_interaction_area_area_exited"]
